# drugx

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  k8s-deployment.yaml  k8s-service.yaml  main.py  nginx.conf  pyproject.toml  requirements.txt  start-nginx.sh
.github/workflows/: code-quality.yml  deploy-docs.yml  deploy-hf.yml
data/: data_processor.py  webscraper.py
data/notebooks/: data_exploration.ipynb
src/: constants.py
src/clients/: ddinter.py  llm.py  openfda.py  pubchem.py  rxnorm.py
src/frontend/: app.py  styles.css
src/frontend/static/: pagebot-config.js
src/frontend/static/docs/: 01_rxnorm.md  02_ddinter.md  README.md  _navbar.md  architecture.md  contributing.md  index.html  monitoring.md  nginx.md  pagebot-config.js  test.md
src/frontend/static/docs/docs/: 03_openfda.md  04_pubchem.md  05_llm.md  _sidebar.md  architecture.md  cicd.md
src/utils/: database.py  log_failed_drug.py  logging.py  text_cleaning.py
tests/: conftest.py  test_ddinter_client.py  test_llm_client.py  test_openfda_client.py  test_pubchem_client.py  test_rxnorm_client.py
